--- a/templates/user_manager/manage_users.html
+++ b/templates/user_manager/manage_users.html
@@ -8,12 +8,14 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
-            <th>Telephone Number</th>
+            <th>Telephone</th>
             <th>Enabled</th>
             <th>Profile</th>
             <th>Password</th>
+              <th>Sms Status</th>
             <th>Edit</th>
             <th>Enable/Disable</th>
+
         </tr>
         </thead>
         <tbody>
@@ -26,6 +28,7 @@
                 <td>{{ user.is_enabled }}</td>
                 <td>{{ user.profile }}</td>
                 <td>{{ user.password }}</td>
+                <td>{{ user.sms_delivered }}</td>
                 <td>
                     <a href="{% url 'edit_user' user.id %}" class="btn btn-primary">Edit</a>
                 </td>
