styled pages, and added pagination to manage_users.html

--- a/templates/user_manager/edit_user.html
+++ b/templates/user_manager/edit_user.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_default.html' %}
 {% block title %} Edit User {% endblock %}
 {% block content %}
     <h1 class="mb-4">Edit User</h1>
