--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Custom CSS for responsiveness and gradient background -->
     <style>
+        html, body {
+            height: 100%;
+        }
+
         /* Gradient background */
         body {
-            background-size: cover;
-            background: linear-gradient(to bottom, #4e9de6, #31415d) no-repeat fixed;
-        {#color: #fff;#}
+            background: linear-gradient(to bottom, #f0f0f0, #e0e0e0);
         }
 
         .navbar {
