--- a/templates/user_manager/manage_users.html
+++ b/templates/user_manager/manage_users.html
@@ -1,49 +1,70 @@
+<style>
+    th {
+        white-space: nowrap;
+    }
+</style>
 {% extends 'base_default.html' %}
 {% block title %} Manage Users {% endblock %}
 {% block content %}
-    <h1>Manage Users</h1>
-    <table class="table table-bordered">
-        <thead class="thead-dark">
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Telephone</th>
-            <th>Enabled</th>
-            <th>Profile</th>
-            <th>Password</th>
-              <th>Sms Status</th>
-            <th>Edit</th>
-            <th>Enable/Disable</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.first_name }}</td>
-                <td>{{ user.last_name }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.telephone_number }}</td>
-                <td>{{ user.is_enabled }}</td>
-                <td>{{ user.profile }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.sms_delivered }}</td>
-                <td>
-                    <a href="{% url 'edit_user' user.id %}" class="btn btn-primary">Edit</a>
-                </td>
-                <td>
-                    <form method="post" action="{% url 'toggle_enable_user' user.id %}">
-                        {% csrf_token %}
-                        {% if user.is_enabled %}
-                            <button type="submit" class="btn btn-danger">Disable</button>
-                        {% else %}
-                            <button type="submit" class="btn btn-success">Enable</button>
-                        {% endif %}
-                    </form>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="container mt-4">
+        <h2 class="text-center mb-4">Manage Users</h2>
+        <table class="table table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Telephone</th>
+                    <th>Enabled</th>
+                    <th>Profile</th>
+                    <th>Password</th>
+                    <th>SMS Status</th>
+                    <th>Edit</th>
+                    <th>Enable/Disable</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                <tr>
+                    <td>{{ user.first_name }}</td>
+                    <td>{{ user.last_name }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.telephone_number }}</td>
+                    <td>{{ user.is_enabled }}</td>
+                    <td>{{ user.profile }}</td>
+                    <td>{{ user.password }}</td>
+                    <td>{{ user.sms_delivered }}</td>
+                    <td>
+                        <a href="{% url 'edit_user' user.id %}" class="btn btn-primary">Edit</a>
+                    </td>
+                    <td>
+                        <form method="post" action="{% url 'toggle_enable_user' user.id %}">
+                            {% csrf_token %}
+                            {% if user.is_enabled %}
+                                <button type="submit" class="btn btn-danger">Disable</button>
+                            {% else %}
+                                <button type="submit" class="btn btn-success">Enable</button>
+                            {% endif %}
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div class="pagination-container text-center">
+            <span class="step-links">
+                {% if users.has_previous %}
+                    <a href="?page=1" class="btn btn-primary">&laquo; first</a>
+                    <a href="?page={{ users.previous_page_number }}" class="btn btn-primary">previous</a>
+                {% endif %}
+                <span class="current-page">
+                    Page {{ users.number }} of {{ users.paginator.num_pages }}.
+                </span>
+                {% if users.has_next %}
+                    <a href="?page={{ users.next_page_number }}" class="btn btn-primary">next</a>
+                    <a href="?page={{ users.paginator.num_pages }}" class="btn btn-primary">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+    </div>
 {% endblock %}
