--- a/templates/user_manager/manage_users.html
+++ b/templates/user_manager/manage_users.html
@@ -54,15 +54,15 @@
         <div class="pagination-container text-center">
             <span class="step-links">
                 {% if users.has_previous %}
-                    <a href="?page=1" class="btn btn-primary">&laquo; first</a>
-                    <a href="?page={{ users.previous_page_number }}" class="btn btn-primary">previous</a>
+                    <a href="?page=1" class="btn btn-primary">&laquo; First</a>
+                    <a href="?page={{ users.previous_page_number }}" class="btn btn-primary">Previous</a>
                 {% endif %}
                 <span class="current-page">
                     Page {{ users.number }} of {{ users.paginator.num_pages }}.
                 </span>
                 {% if users.has_next %}
-                    <a href="?page={{ users.next_page_number }}" class="btn btn-primary">next</a>
-                    <a href="?page={{ users.paginator.num_pages }}" class="btn btn-primary">last &raquo;</a>
+                    <a href="?page={{ users.next_page_number }}" class="btn btn-primary">Next</a>
+                    <a href="?page={{ users.paginator.num_pages }}" class="btn btn-primary">Last &raquo;</a>
                 {% endif %}
             </span>
         </div>
