--- a/templates/user_manager/manage_users.html
+++ b/templates/user_manager/manage_users.html
@@ -10,37 +10,39 @@
         <h2 class="text-center mb-4">Manage Users</h2>
         <table class="table table-bordered">
             <thead class="thead-dark">
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Telephone</th>
-                    <th>Enabled</th>
-                    <th>Profile</th>
-                    <th>Password</th>
-                    <th>SMS Status</th>
-                    <th>Edit</th>
-                    <th>Enable/Disable</th>
-                </tr>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Telephone</th>
+                <th>Enabled</th>
+                <th>Username</th>
+                <th>Password</th>
+                <th>Profile</th>
+                <th>SMS Status</th>
+                <th>Edit</th>
+                <th>Enable/Disable</th>
+            </tr>
             </thead>
             <tbody>
-                {% for user in users %}
+            {% for user in users %}
                 <tr>
-                    <td>{{ user.first_name }}</td>
-                    <td>{{ user.last_name }}</td>
+                    <td>{{ user.firstname }}</td>
+                    <td>{{ user.lastname }}</td>
                     <td>{{ user.email }}</td>
-                    <td>{{ user.telephone_number }}</td>
-                    <td>{{ user.is_enabled }}</td>
-                    <td>{{ user.profile }}</td>
+                    <td>{{ user.mobilephone }}</td>
+                    <td>{{ user.isenabled }}</td>
+                    <td>{{ user.username }}</td>
                     <td>{{ user.password }}</td>
-                    <td>{{ user.sms_delivered }}</td>
+                    <td>{{ user.profile }}</td>
+                    <td>{{ user.smsdelivered }}</td>
                     <td>
                         <a href="{% url 'edit_user' user.id %}" class="btn btn-primary">Edit</a>
                     </td>
                     <td>
                         <form method="post" action="{% url 'toggle_enable_user' user.id %}">
                             {% csrf_token %}
-                            {% if user.is_enabled %}
+                            {% if user.isenabled %}
                                 <button type="submit" class="btn btn-danger">Disable</button>
                             {% else %}
                                 <button type="submit" class="btn btn-success">Enable</button>
@@ -48,7 +50,7 @@
                         </form>
                     </td>
                 </tr>
-                {% endfor %}
+            {% endfor %}
             </tbody>
         </table>
         <div class="pagination-container text-center">
