--- a/templates/user_manager/registration.html
+++ b/templates/user_manager/registration.html
@@ -7,28 +7,28 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="first_name">First Name:</label>
+                    <label for="firstname">First Name:</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="first_name" name="first_name" required placeholder="First Name">
+                        <input type="text" class="form-control" id="firstname" name="firstname" required placeholder="First Name">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
                     </div>
-                    {% if form.first_name.errors %}
-                        <small class="text-danger">{{ form.first_name.errors.0 }}</small>
+                    {% if form.firstname.errors %}
+                        <small class="text-danger">{{ form.firstname.errors.0 }}</small>
                     {% endif %}
                 </div>
 
                 <div class="form-group">
-                    <label for="last_name">Last Name:</label>
+                    <label for="lastname">Last Name:</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="last_name" name="last_name" required placeholder="Last Name">
+                        <input type="text" class="form-control" id="lastname" name="lastname" required placeholder="Last Name">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
                     </div>
-                    {% if form.last_name.errors %}
-                        <small class="text-danger">{{ form.last_name.errors.0 }}</small>
+                    {% if form.lastname.errors %}
+                        <small class="text-danger">{{ form.lastname.errors.0 }}</small>
                     {% endif %}
                 </div>
 
@@ -46,25 +46,25 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="telephone_number">Telephone Number:</label>
+                    <label for="mobilephone">Telephone Number:</label>
                     <div class="input-group">
-                        <input type="tel" class="form-control" id="telephone_number" name="telephone_number" required
-                            placeholder="Telephone Number">
+                        <input type="tel" class="form-control" id="mobilephone" name="mobilephone" required
+                            placeholder="Mobile Number">
                         <div class="input-group-append">
                             <span class="input-group-text"><i class="fas fa-phone"></i></span>
                         </div>
                     </div>
-                    {% if form.telephone_number.errors %}
-                        <small class="text-danger">{{ form.telephone_number.errors.0 }}</small>
+                    {% if form.mobilephone.errors %}
+                        <small class="text-danger">{{ form.mobilephone.errors.0 }}</small>
                     {% endif %}
                 </div>
 
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="terms_and_conditions" name="terms_and_conditions"
-                        required {{ form.terms_and_conditions.value|yesno:"checked,unchecked" }}>
-                    <label class="form-check-label" for="terms_and_conditions">I accept the terms and conditions</label>
-                    {% if form.terms_and_conditions.errors %}
-                        <small class="text-danger">{{ form.terms_and_conditions.errors.0 }}</small>
+                    <input type="checkbox" class="form-check-input" id="termsandconditions" name="termsandconditions"
+                        required {{ form.termsandconditions.value|yesno:"checked,unchecked" }}>
+                    <label class="form-check-label" for="termsandconditions">I accept the terms and conditions</label>
+                    {% if form.termsandconditions.errors %}
+                        <small class="text-danger">{{ form.termsandconditions.errors.0 }}</small>
                     {% endif %}
                 </div>
 
