setting up for initial deployment

--- a/templates/user_manager/edit_user.html
+++ b/templates/user_manager/edit_user.html
@@ -53,9 +53,9 @@
         </div>
 
         <div class="mb-3 form-check">
-            <input type="checkbox" id="is_enabled" name="is_enabled" {% if user.isenabled %}checked{% endif %}
+            <input type="checkbox" id="isenabled" name="isenabled" {% if user.isenabled %}checked{% endif %}
                    class="form-check-input">
-            <label class="form-check-label" for="is_enabled">Enabled</label>
+            <label class="form-check-label" for="isenabled">Enabled</label>
         </div>
 
         <div class="mb-3">
