--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">User Manager</a>
         <a class="navbar-brand" href="/login">Login</a>
-        <a class a class="navbar-brand" href="/registration">Register</a>
+        <a class="navbar-brand" href="/registration">Register</a>
     </nav>
 {% endif %}
 
